--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</div>
 					<div class="col-sm-9">
 						<ul id="top_links">
-							<li><a href="tel://+59332586728" id="phone_top">+593 032588785</a><span id="opening">Lun - Vie 8.00/17.00</span></li>
+							<li><a href="tel://+59332586728" id="phone_top">+593 32586728</a><span id="opening">Lun - Vie 8.00/17.00</span></li>
 						</ul>
 					</div>
 				</div><!-- End row -->
@@ -174,7 +174,7 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/shield.svg" alt=""></span>
                             <h3>Protección especializada</h3>
-                            <p>Protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
+                            <p>protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
 </p>
                         </div>
 					</div>
@@ -191,13 +191,13 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/video-camera.svg" alt=""></span>
                             <h3>Videovigilancia</h3>
-                            <p>Es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
+                            <p>es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img/svg_icons/microphone.svg" alt=""></span>
-                            <h3>Protección VIP</h3>
+                            <h3>•	Protección VIP</h3>
                             <p>Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
                         </div>
 					</div>
@@ -206,7 +206,7 @@
 					<div class="col-md-6">
                         <div class="box_feat">
                             <span><img src="img/svg_icons/settings.svg" alt=""></span>
-                            <h3>Consultoría</h3>
+                            <h3>•	Consultoría</h3>
                             <p>Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
                         </div>
 					</div>
@@ -218,189 +218,9 @@
                         </div>
 					</div>
 				</div><!-- End row -->
-				<div class="row">
-					<div class="col-md-6">
-												<div class="box_feat">
-														<span><img src="img/svg_icons/settings.svg" alt=""></span>
-														<h3>Respuesta a alertas de emergencia</h3>
-														<p>Contamos con patrullaje de emergencia ante llamadas de auxilio, o activación de botón de pánico, dando respuesta inmediata a cualquier emergencia 24/7.</p>
-												</div>
-					</div>
-					<div class="col-md-6">
-						<div class="box_feat">
-														<span><img src="img/svg_icons/clipboard.svg" alt=""></span>
-														<h3>lorem ipsum</h3>
-														<p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
-												</div>
-					</div>
-				</div><!-- End row -->
 
 			</div>
 		</div><!-- End feat home -->
-
-		<div class="container margin_60_35">
-			<div class="row add_bottom_30">
-				<div class="col-md-4">
-					<div class="box_quote">
-						<h3><strong>Realiza HOY</strong>tu cotización</h3>
-						<p class="lead">No te tomará mas de unos minutos.</p>
-						<ul>
-							<li><i class="icon_check_alt2"></i>Más fácil</li>
-							<li><i class="icon_check_alt2"></i>Más rápido</li>
-							<li><i class="icon_check_alt2"></i>Sin compromiso</li>
-							<li><i class="icon_check_alt2"></i>Obtén hasta 30% de descuento</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-8">
-                <form id="custom" method="POST" class="add_bottom_30">
-					<input id="website" name="website" type="text" value="">
-						<fieldset title="Paso 1">
-							<legend>Instalación</legend>
-							<h3>En donde deseas instalar una alarma?</h3>
-							<div class="form-group">
-								<label><input type="radio" value="Apartment" id="apartmento" name="location" class="icheck">Departamento</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="Villa" id="Residencia" name="location" class="icheck">Residencia</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="Office" id="Oficina" name="location" class="icheck">Oficina</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="Shop" id="Tienda" name="location" class="icheck">Tienda</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="Warehouse" id="Almacén" name="location" class="icheck">Almacén</label>
-							</div>
-						</fieldset><!-- End Step one -->
-
-						<fieldset title="Paso 2">
-							<legend>Detalles</legend>
-							<h3>Por favor, responde lo siguiente:</h3>
-							<div class="form-group">
-								<label>Existen puertas reforzadas?. De haberlo, cuántas?</label>
-								<div class="styled-select">
-									<select name="armored_door" id="armored_door">
-										<option value="" selected="">Cantidad</option>
-										<option value="0">0</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="More than 3">Más de 3</option>
-									</select>
-								</div>
-							</div>
-							<div class="form-group">
-								<label>Cuántas ventanas se desea proteger?</label>
-								<div class="styled-select">
-									<select name="windows" id="windows">
-										<option value="" selected="">Cantidad</option>
-										<option value="0">0</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="More than 3">Más de 3</option>
-									</select>
-								</div>
-							</div>
-							<div class="form-group">
-								<label>Cuántas áreas se desea proteger?</label>
-								<div class="styled-select">
-									<select name="zones" id="zones">
-										<option value="" selected="">Cantidad</option>
-										<option value="0">0</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="More than 3">Más de 3</option>
-									</select>
-								</div>
-							</div>
-						</fieldset><!-- End Step two -->
-
-						<fieldset title="Paso 3">
-							<legend>Opciones</legend>
-							<h3>Existen accesos secundarios?</h3>
-							<div class="form-group">
-								<label><input type="checkbox" value="Garden" id="garden" name="accesses[]" class="icheck">Jardín</label>
-							</div>
-							<div class="form-group">
-								<label><input type="checkbox" value="Balcony or terrace" id="balcony_terrace" name="accesses[]" class="icheck">Balcón o terraza</label>
-							</div>
-							<div class="form-group">
-								<label><input type="checkbox" value="No one" id="no_one" name="accesses[]" class="icheck">Ninguno</label>
-							</div>
-							<div class="form-group">
-								<label><input type="checkbox" value="Not interested" id="not_interested" name="accesses[]" class="icheck">No busco proteger áreas exteriores</label>
-							</div>
-						</fieldset><!-- End Step three -->
-
-						<fieldset title="Paso 4">
-							<legend>Presupuesto</legend>
-							<h3>Cuán grande es tu presupuesto?</h3>
-							<div class="form-group">
-								<label><input type="radio" value="300-500$" id="budget_1" name="budget" class="icheck">300-500$</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="500-1000$" id="budget_2" name="budget" class="icheck">500-1000$</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="More than 1000$" id="budget_3" name="budget" class="icheck">Más de 1000$</label>
-							</div>
-							<div class="form-group">
-								<label><input type="radio" value="I don't know" id="budget_4" name="budget" class="icheck">No lo sé</label>
-							</div>
-						</fieldset><!-- End Step four -->
-
-						<fieldset title="Paso 5">
-							<legend>Tus datos</legend>
-							<div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <div class="form-group">
-                                        <label>Nombre</label>
-                                        <input type="text" class="form-control" id="firstname_quote" name="firstname_quote">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-sm-6">
-                                    <div class="form-group">
-                                        <label>Apellido</label>
-                                        <input type="text" class="form-control" id="lastname_quote" name="lastname_quote">
-                                    </div>
-                                </div>
-                            </div><!-- End row -->
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6">
-                                    <div class="form-group">
-                                        <label>Email</label>
-                                        <input type="email" class="form-control" id="email_quote" name="email_quote">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-sm-6">
-                                    <div class="form-group">
-                                        <label>Teléfono</label>
-                                        <input type="text" class="form-control" id="phone_quote" name="phone_quote">
-                                    </div>
-                                </div>
-                            </div><!-- End row -->
-                            <hr>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Describe tu propiedad tanto como sea posible, distribución, equipamento eléctrico, etc.</label>
-                                        <textarea name="message_general" id="message_general" style="height:100px" class="form-control"></textarea>
-                                    </div>
-									<div class="form-group">
-										<input name="terms" type="checkbox" value="Yes" class="icheck"> <a data-toggle="modal" data-target="#myModal" href="#0">Acepto los términos y condiciones</a>
-									</div>
-                                </div>
-                            </div><!-- End row -->
-						</fieldset><!-- End Step five -->
-						<input type="submit" class="finish" value="Enviar">
-					</form>
-				</div>
-			</div><!-- End row -->
-		</div><!-- End container -->
 	</main><!-- End main -->
 
 <footer>
@@ -424,7 +244,7 @@
           <h3>Contactos</h3>
           <ul id="contact_details_footer">
             <li id="address_footer">Remigio Crespo y Psje. Romeo Castillo <br>Ambato - Ecuador</li>
-            <li id="phone_footer"><a href="tel://+59332588785"> 032588785</a> / <a href="tel://+593994811800"> 0994811800</a></li>
+            <li id="phone_footer"><a href="tel://+59332586728">32586728</a> / <a href="tel://+59332586728"> 32586728</a></li>
             <li id="email_footer"><a href="#0">info@alfapaz.com</a></li>
           </ul>
         </div>
@@ -444,24 +264,6 @@
   </footer><!-- End footer -->
 
 	<div id="toTop"></div><!-- Back to top button -->
-
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	  <div class="modal-dialog">
-		<div class="modal-content">
-		  <div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<h4 class="modal-title" id="myModalLabel">Términos y condiciones</h4>
-		  </div>
-		  <div class="modal-body">
-			<h5>Ei aliquip regione</h5>
-			<p>Lorem ipsum dolor sit amet, nibh omnium in eum, ne per omittam eligendi efficiantur. Eos at mundi dolorem, ad cum omnes utroque fastidii, est fastidii apeirian ea. Ne duo diceret partiendo voluptatum, vel at iudico civibus. Purto erant aliquando ex eos, at vel odio modo. In mel tollit reprehendunt, ut usu praesent posidonium cotidieque. Clita assentior maiestatis sea in, at electram voluptaria mel. Tale nusquam adipisci ad mel, partem civibus no vix, sea no accusata dignissim.</p>
-			<h5>Altera vocibus eleifend</h5>
-			<p>No dico agam error qui, adhuc dicat argumentum sit in. Munere virtute ea ius. Mei an graeco repudiandae disputationi, ex per animal invidunt, probo civibus ne duo. Mea ad officiis temporibus, vim ne idque probatus phaedrum, elit delectus indoctum te has. No sea reprimique necessitatibus, ut usu quas falli.</p>
-		  </div>
-		</div>
-	  </div>
-	</div>
 
 	<!-- Common scripts -->
 	<script src="js/jquery-2.2.4.min.js"></script>
