--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -169,6 +169,30 @@
                 <span><input type="radio" id="data_14_1" name="data_14" value="No"/> No</span><br/>
                 <span><input type="radio" id="data_14_2" name="data_14" value="Not sure"/> No estoy seguro/a</span><br/>
               </div>
+
+              <div class="form-group options clearfix">
+                  <strong>Cuentas con certificación?</strong>
+                  <label class="switch-light switch-ios pull-right">
+                  <input type="checkbox" name="option_2" id="option_2" checked value="Yes">
+                  <span>
+                  <span>Sí</span>
+                  </span>
+                  <a></a>
+                  </label>
+              </div>
+              <div class="form-group options clearfix">
+                  <strong>Cuentas con reentrenamiento?</strong>
+                  <label class="switch-light switch-ios pull-right">
+                  <input type="checkbox" name="option_2" id="option_2" checked value="Yes">
+                  <span>
+                  <span>Sí</span>
+                  </span>
+                  <a></a>
+                  </label>
+              </div>
+   </div><!--End row -->
+ </div><!--End step -->
+
               <div style="padding-bottom: 18px;"> Cuál es la última empresa para la que trabajaste?<br/>
                 <input type="text" id="data_15" name="data_15" style="width : 450px;" class="form-control"/>
               </div>
