--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -242,7 +242,7 @@
                         <h5>Encontraste lo que buscabas?</h5>
                         <p class="nopadding">
                             Nuestro personal está listo para atender cualquier duda.<br>
-                            <a href="contacts.html" class="link_normal">Contáctanos</a>
+                            <a href="contacto.html" class="link_normal">Contáctanos</a>
                         </p>
                     </div><!-- End Box_style_1 -->
                 </div><!-- End col-md-3 -->
