--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/shield.svg" alt=""></span>
                             <h3>Protección especializada</h3>
-                            <p>protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
+                            <p>Protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
 </p>
                         </div>
 					</div>
@@ -191,13 +191,13 @@
                         <div class="box_feat">
                             <span><img src="img/svg_icons/video-camera.svg" alt=""></span>
                             <h3>Videovigilancia</h3>
-                            <p>es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
+                            <p>Es el complemento para una seguridad integral, con modernos sistemas electrónicos de última tecnología. </p>
                         </div>
 					</div>
 					<div class="col-md-6">
 						<div class="box_feat">
                             <span><img src="img/svg_icons/microphone.svg" alt=""></span>
-                            <h3>•	Protección VIP</h3>
+                            <h3>Protección VIP</h3>
                             <p>Servicio de guardaespaldas, traslados, investigación y custodia al mas alto nivel y discreción, con ex Oficiales de las fuerzas del orden nacional.</p>
                         </div>
 					</div>
@@ -206,7 +206,7 @@
 					<div class="col-md-6">
                         <div class="box_feat">
                             <span><img src="img/svg_icons/settings.svg" alt=""></span>
-                            <h3>•	Consultoría</h3>
+                            <h3>Consultoría</h3>
                             <p>Realizamos estudios de seguridad integral, identificando puntos vulnerables y sensibles en la prevención de eventos que atenten con la seguridad física y de personas.</p>
                         </div>
 					</div>
@@ -215,6 +215,22 @@
                             <span><img src="img/svg_icons/clipboard.svg" alt=""></span>
                             <h3>Profesionales certificados</h3>
                             <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
+                        </div>
+					</div>
+				</div><!-- End row -->
+				<div class="row">
+					<div class="col-md-6">
+                        <div class="box_feat">
+                            <span><img src="img/svg_icons/settings.svg" alt=""></span>
+                            <h3>Respuesta a alertas de emergencia</h3>
+                            <p>Contamos con patrullaje de emergencia ante llamadas de auxilio, o activación de botón de pánico, dando respuesta inmediata a cualquier emergencia 24/7.</p>
+                        </div>
+					</div>
+					<div class="col-md-6">
+						<div class="box_feat">
+                            <span><img src="img/svg_icons/clipboard.svg" alt=""></span>
+                            <h3>Seguridad para Eventos.</h3>
+                            <p>Nos encargamos de la seguridad en tus eventos públicos o privados, identificando amenazas de riesgo en coordinación con los organismos de control, 911, Policía, bomberos, cruz roja, con patrullaje propio mientras dura el mismo.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
