--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -128,7 +128,6 @@
       <main>
         <div class="container margin_60_35">
         	<div class="row">
-
             <div class="col-md-9">
               <form method="post" action="//submit.form" onSubmit="return validateForm();">
               <div style="width: 400px;">
@@ -136,7 +135,6 @@
               <div style="padding-bottom: 18px;font-size : 24px;">Buscamos nuevos talentos.</div>
               <div style="padding-bottom: 18px;font-size : 18px;">Recuerda llenar cada uno de los campos con información correcta y que nos permita comunicarnos contigo.</div>
               <div style="padding-bottom: 18px;font-size : 18px;">Requisitos indispensables</div>
-              <ul>
                 <li><i class=></i>Título de bachiller</li>
                 <li><i class=></i>Edad: entre 25 y 50 años</li>
                 <li><i class=></i>Experiencia mínima: 1 año</li>
@@ -144,48 +142,41 @@
                 <li><i class=></i>Curso de reentrenamiento (En caso de poseer)</li>
                 <li><i class=></i>No poseer antecedentes penales o judiciales</li>
                 <li><i class=></i>Disponibilidad completa</li>
-              </ul>
               <div style="padding-bottom: 18px;font-size : 18px;">Información Personal</div>
               <div style="display: flex; padding-bottom: 18px;width : 450px;">
-              <div style=" margin-left : 0; margin-right : 1%; width : 49%;">Nombres<span style="color: red;"> *</span><br/>
-                <input type="text" id="data_3" name="data_3" style="width: 100%;" class="form-control"/>
+                <div style=" margin-left : 0; margin-right : 1%; width : 49%;">Nombres<span style="color: red;"> *</span><br/>
+                  <input type="text" id="data_3" name="data_3" style="width: 100%;" class="form-control"/>
+                </div>
+                <div style=" margin-left : 1%; margin-right : 0; width : 49%;">Apellidos<span style="color: red;"> *</span><br/>
+                  <input type="text" id="data_4" name="data_4" style="width: 100%;" class="form-control"/>
+                </div>
               </div>
-              <div style=" margin-left : 1%; margin-right : 0; width : 49%;">Apellidos<span style="color: red;"> *</span><br/>
-                <input type="text" id="data_4" name="data_4" style="width: 100%;" class="form-control"/>
-              </div>
-              </div><div style="padding-bottom: 18px;">Email<span style="color: red;"> *</span><br/>
-                <input type="text" id="data_5" name="data_5" style="width : 450px;" class="form-control"/>
-              </div>
-              <div style="padding-bottom: 18px;">Número telefónico<span style="color: red;"> *</span><br/>
-                <input type="text" id="data_6" name="data_6" style="width : 450px;" class="form-control"/>
-              </div>
+                <div style="padding-bottom: 18px;">Email<span style="color: red;"> *</span><br/>
+                  <input type="text" id="data_5" name="data_5" style="width : 450px;" class="form-control"/>
+                </div>
+                <div style="padding-bottom: 18px;">Número telefónico<span style="color: red;"> *</span><br/>
+                  <input type="text" id="data_6" name="data_6" style="width : 450px;" class="form-control"/>
+                </div>
               <div style="padding-bottom: 9px;font-size : 18px;">Información Profesional</div>
-              <div style="padding-bottom: 18px;"><strong>Adjunta la siguiente informaciónen un archivo comprimido (ZIP,RAR,7ZIP):<span style="color: red;"> *</span></strong><br/>
-              Hoja de vida, cédula y certificado de votación, Carné del Ministerio de Gobierno, Certificado del Curso de Re-entrenamiento, Licencia de conducir, Acta de grado, Certificados laborales, Diplomas de cursos realizados, Certificado de antecedentes penales, Certificado médico que acredite excelente salud, dísica y mental (otorgado por la Red de Salud Pública del Ecuador)<br/>
-                <input id="data_10" name="data_10" style="width : 450px;" type="file" class="form-control"/>
-              </div>
-              <div style="padding-bottom: 18px;">Cuándo puedes comenzar?<span style="color: red;"> *</span><br/>
-                <input type="text" id="data_13" name="data_13" style="width : 450px;" class="form-control"/>
-              </div>
-              <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
-                <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
-              <script type="text/javascript">new Pikaday({ field: document.getElementById('data_13') });</script>
+                <div style="padding-bottom: 18px;"><strong>Adjunta la siguiente informaciónen un archivo comprimido (ZIP,RAR,7ZIP):<span style="color: red;"> *</span></strong><br/>
+                Hoja de vida, cédula y certificado de votación, Carné del Ministerio de Gobierno, Certificado del Curso de Re-entrenamiento, Licencia de conducir, Acta de grado, Certificados laborales, Diplomas de cursos realizados, Certificado de antecedentes penales, Certificado médico que acredite excelente salud, dísica y mental (otorgado por la Red de Salud Pública del Ecuador)<br/>
+                  <input id="data_10" name="data_10" style="width : 450px;" type="file" class="form-control"/>
+                </div>
+                <div style="padding-bottom: 18px;">Cuándo puedes comenzar?<span style="color: red;"> *</span><br/>
+                  <input type="text" id="data_13" name="data_13" style="width : 450px;" class="form-control"/>
+                </div>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
+                  <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
+                <script type="text/javascript">new Pikaday({ field: document.getElementById('data_13') });</script>
               <div style="padding-bottom: 18px;">Estás dispuesto/a a residir fuera de tu ciudad?<span style="color: red;"> *</span><br/>
                 <span><input type="radio" id="data_14_0" name="data_14" value="Yes"/> Si</span><br/>
                 <span><input type="radio" id="data_14_1" name="data_14" value="No"/> No</span><br/>
                 <span><input type="radio" id="data_14_2" name="data_14" value="Not sure"/> No estoy seguro/a</span><br/>
               </div>
-            </div><!--End row -->
-          </div><!--End step -->
-
               <div style="padding-bottom: 18px;"> Cuál es la última empresa para la que trabajaste?<span style="color: red;"> *</span><br/>
                 <input type="text" id="data_15" name="data_15" style="width : 450px;" class="form-control"/>
               </div>
               <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Enviar" class="btn_1 green medium add_bottom_30" type="submit"/></div>
-              <!-- <div>
-              <script src="https://www.100forms.com/js/FORMKEY:NFXY8DRGLNDK" type="text/javascript"></script>
-              </div> -->
-
               </form>
 
               <script type="text/javascript">
@@ -214,6 +205,18 @@
                   alert('Es necesario especificar el puesto al que se aplica.');
                   return false;
                 }
+                if (isEmpty(document.getElementById('data_10').value.trim())) {
+                  alert('Es necesario especificar el puesto al que se aplica.');
+                  return false;
+                }
+                if (isEmpty(document.getElementById('data_13').value.trim())) {
+                  alert('Es necesario especificar el puesto al que se aplica.');
+                  return false;
+                }
+                if (isEmpty(document.getElementById('data_15').value.trim())) {
+                  alert('Es necesario especificar el puesto al que se aplica.');
+                  return false;
+                }
                 return true;
                 }
                 function isEmpty(str) { return (str.length === 0 || !str.trim()); }
@@ -222,8 +225,10 @@
                   return isEmpty(email) || re.test(email);
                 }
               </script>
-           </div><!-- End col-md-9 -->
-	        </main><!-- End main -->
+        </div><!--End col -->
+      </div><!--End row -->
+    </div><!--End step -->
+  </main><!--End main -->
 
   <footer>
     <div class="container">
@@ -272,10 +277,6 @@
 	<script src="js/common_scripts_min.js"></script>
 	<script src="js/functions.js"></script>
 
-	<!-- GOOGLE MAP -->
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript" src="js/mapmarker.jquery.js"></script>
-	<script type="text/javascript" src="js/mapmarker_func.jquery.js"></script>
 
 	<!-- Form validation -->
 	<script src="assets/validate.js"></script>
