--- a/personal-administrativo.html
+++ b/personal-administrativo.html
@@ -137,7 +137,7 @@
                 <div class="container margin_60_35">
                 	<div class="row">
                         <div class="col-md-9">
-                            <h3>Trabaja con nosotros</h3>
+                            <h3>Carrera administrativa</h3>
                             <p class="add_bottom_30">
                               Alfapaz, dentro de su plan empresarial tiene presente el contar con personal altamente calificado para cada área de atención en el mundo de la seguridad, nuestro personal administrativo y de operaciones tiene una capacitación constante en las competencias necesarias y adquiridas para el crecimiento profesional y personal de cada uno de nuestros empleados.
                             </p>
