--- a/personal-administrativo.html
+++ b/personal-administrativo.html
@@ -140,7 +140,7 @@
                             <h3>Carrera administrativa</h3>
                             <p class="add_bottom_30">
                             Lo sentimos.</br>
-                            Por el momento no estamos buscando personal en áreas administrativas
+                            Por el momento no estamos buscando personal en áreas administrativas.
                             </p>
 
                         </div><!-- End col-md-9 -->
