--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -221,8 +221,8 @@
                           <ul class="feat">
                                 <li>
                                	  <img src="img/icon_service_3.png" alt="" width="50" height="56" data-retina="true">
-                               	  <h4>Profesionales calificados</h4>
-                                    <p>Contamos con personal capacitado para un desarrollo constante y eficiente de su labores.</p>
+                               	  <h4>Cobertura nacional.</h4>
+                                    <p>Contamos con cobertura nacional, para brindar un mejor servicio</p>
                             	</li>
                                 <li>
                                 	<img src="img/icon_service_4.png" alt="" width="50" height="50" data-retina="true">
