--- a/acerca-de.html
+++ b/acerca-de.html
@@ -164,30 +164,30 @@
 					<ul class="feat" id="about">
 						<li>
 							<i class="icon_check_alt2"></i>
-							<h4>Servicio Profesional</h4>
+							<h4>Integridad</h4>
 							<p>
-								Eum purto epicurei cotidieque at, ius luptatum invidunt no, vim at sint pertinacia repudiandae. Ad cum dicant laboramus delicatissimi, ex has nonumes explicari prodesset, brute tincidunt conclusionemque no has. Sit ullum latine ei. Ius id adhuc iriure torquatos.
+								Actuamos de manera honesta, en nuestro proceder, alcanzando los objetivos por nuestro esfuerzo propio, exigiendo y respetando la integridad en todo sentido.
 							</p>
 						</li>
 						<li>
 							<i class="icon_check_alt2"></i>
-							<h4>Precios Accesibles</h4>
+							<h4>Solidaridad</h4>
 							<p>
-								Ad cum dicant laboramus delicatissimi, ex has nonumes explicari prodesset, brute tincidunt conclusionemque no has. Sit ullum latine ei. Ius id adhuc iriure torquatos. Justo prompta senserit eos cu, omnesque posidonium liberavisse pri in.
+								Trabajamos en el desarrollo de nuestra gente en lo profesional, por medio de capacitación constante, motivando ese espíritu solidario y de liderazgo en su entorno familiar.
 							</p>
 						</li>
 						<li>
 							<i class="icon_check_alt2"></i>
-							<h4>Soporte Técnico</h4>
+							<h4>Decisión</h4>
 							<p>
-								Eum purto epicurei cotidieque at, ius luptatum invidunt no, vim at sint pertinacia repudiandae. Ad cum dicant laboramus delicatissimi, ex has nonumes explicari prodesset, brute tincidunt conclusionemque no has. Sit ullum latine ei. Justo prompta senserit eos cu, omnesque posidonium liberavisse pri in.
+								Actuamos éticamente, comprometidos en crecer de manera responsable, cumpliendo eficientemente con nuestros colaboradores, clientes y Estado.
 							</p>
 						</li>
 						<li>
 							<i class="icon_check_alt2"></i>
-							<h4>Garantía de servicio</h4>
+							<h4>Servicio</h4>
 							<p>
-								Ad cum dicant laboramus delicatissimi, ex has nonumes explicari prodesset, brute tincidunt conclusionemque no has. Sit ullum latine ei. Ius id adhuc iriure torquatos. Justo prompta senserit eos cu, omnesque posidonium liberavisse pri in.
+								Estamos comprometidos en cumplir con las expectativas de nuestros clientes, brindando servicios de calidad, innovando permanentemente nuestros servicios.
 							</p>
 						</li>
 					</ul>
