--- a/personal-de-seguridad.html
+++ b/personal-de-seguridad.html
@@ -140,7 +140,7 @@
                 <li><i class=></i>Experiencia mínima: 1 año</li>
                 <li><i class=></i>Credencial otorgada por el Ministerio del Interior (Curso 120 horas)</li>
                 <li><i class=></i>Curso de reentrenamiento (En caso de poseer)</li>
-                <li><i class=></i>No poseer antecedentes penales o judiciales</li>
+                <li><i class=></i>No poseer antecedentes penales</li>
                 <li><i class=></i>Disponibilidad completa</li>
               <div style="padding-bottom: 18px;font-size : 18px;">Información Personal</div>
               <div style="display: flex; padding-bottom: 18px;width : 450px;">
@@ -164,6 +164,9 @@
                 </div>
                 <div style="padding-bottom: 18px;">Cuándo puedes comenzar?<span style="color: red;"> *</span><br/>
                   <input type="text" id="data_13" name="data_13" style="width : 450px;" class="form-control"/>
+                </div>
+                <div style="padding-bottom: 18px;">A qué ciudad aplicarías?<span style="color: red;"> *</span><br/>
+                  <input type="text" id="data_13" name="data_20" style="width : 450px;" class="form-control"/>
                 </div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
                   <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
