--- a/nuestros-servicios.html
+++ b/nuestros-servicios.html
@@ -227,7 +227,7 @@
                                 <li>
                                 	<img src="img/icon_service_4.png" alt="" width="50" height="50" data-retina="true">
                                	  <h4>Mejores productos</h4>
-                                    <p>Trabajamos con las mejores marcas del mercado, haciendo nuestro trabajo bajo standards internacionales.</p>
+                                    <p>Trabajamos con las mejores marcas del mercado, haciendo nuestro trabajo bajo estándares internacionales.</p>
                                 </li>
                             </ul>
                         </div>
