--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<div class="box_feat">
                             <span><img src="img\svg_icons_index\Profesionalescertificados.svg" alt=""></span>
                             <h3>Profesionales certificados.</h3>
-                            <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores, transmitiendo e involucrándoles con nuestros valores, con capacitación constante que permita desarrollar sus habilidades.</p>
+                            <p>Somos rigurosos en nuestros procesos de selección con el afán de emplear a los mejores profesionales. Involucramos a nuestro personal en prácticas de valores y capacitación constante que les permite desarrollar sus habilidades.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
@@ -230,7 +230,7 @@
 						<div class="box_feat">
                             <span><img src="img\svg_icons_index\SeguridadparaEventos.svg" alt=""></span>
                             <h3>Seguridad para Eventos.</h3>
-                            <p>Nos encargamos de la seguridad en tus eventos públicos o privados, identificando amenazas de riesgo en coordinación con los organismos de control, 911, Policía, bomberos, cruz roja, con patrullaje propio mientras dura el mismo.</p>
+                            <p>Nos encargamos de la seguridad en tus eventos públicos o privados, identificando amenazas de riesgo en coordinación con los organismos de control: 911, Policía Nacional, Bomberos, Cruz Roja. Te acompañamos con patrullaje mientras dura el mismo.</p>
                         </div>
 					</div>
 				</div><!-- End row -->
