--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9">
-						<h3>Buscas un servicio accesible y de calidad? </h3>
+						<h3>¿Buscas un servicio accesible y de calidad? </h3>
 					</div>
 					<div class="col-md-3">
 						<a href="nuestros-servicios.html" class="btn_quote">Conoce nuestros servicios</a>
@@ -174,8 +174,7 @@
                         <div class="box_feat">
                             <span><img src="img\svg_icons_index\Proteccionespecializada.svg" alt=""></span>
                             <h3>Protección especializada.</h3>
-                            <p>Protegemos tu vida y bienes, por medio de personal altamente calificado y entrenado, con equipo y dotación de seguridad moderno.
-</p>
+                            <p>Protegemos tu vida y bienes con personal altamente calificado y con todos los implementos que tu seguridad necesita </p>
                         </div>
 					</div>
 					<div class="col-md-6">
